--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -1,134 +1,141 @@
 
 @article{reiner_smi_2011,
-	title = {{SMI} 2011: Full Paper: Interactive Modeling of Implicit Surfaces Using a Direct Visualization Approach with Signed Distance Functions},
+	title = {{SMI} 2011: {Full} {Paper}: {Interactive} {Modeling} of {Implicit} {Surfaces} {Using} a {Direct} {Visualization} {Approach} with {Signed} {Distance} {Functions}},
 	volume = {35},
 	issn = {0097-8493},
+	shorttitle = {{SMI} 2011},
 	url = {http://dx.doi.org/10.1016/j.cag.2011.03.010},
 	doi = {10.1016/j.cag.2011.03.010},
-	shorttitle = {{SMI} 2011},
 	abstract = {Modeling appealing virtual scenes is an elaborate and time-consuming task, requiring not only training and experience, but also powerful modeling tools providing the desired functionality to the user. In this paper, we describe a modeling approach using signed distance functions as an underlying representation for objects, handling both conventional and complex surface manipulations. Scenes defined by signed distance functions can be stored compactly and rendered directly in real-time using sphere tracing. Hence, we are capable of providing an interactive application with immediate visual feedback for the artist, which is a crucial factor for the modeling process. Moreover, dealing with underlying mathematical operations is not necessary on the user level. We show that fundamental aspects of traditional modeling can be directly transferred to this novel kind of environment, resulting in an intuitive application behavior, and describe modeling operations which naturally benefit from implicit representations. We show modeling examples where signed distance functions are superior to explicit representations, but discuss the limitations of this approach as well.},
-	pages = {596--603},
 	number = {3},
-	journaltitle = {Comput. Graph.},
-	author = {Reiner, Tim and Mückl, Gregor and Dachsbacher, Carsten},
 	urldate = {2015-11-14},
-	date = {2011-06},
-	keywords = {Distance functions, Implicit surface rendering, Implicit surfaces, Interactive modeling}
+	journal = {Comput. Graph.},
+	author = {Reiner, Tim and Mückl, Gregor and Dachsbacher, Carsten},
+	month = jun,
+	year = {2011},
+	keywords = {Distance functions, Implicit surface rendering, Implicit surfaces, Interactive modeling},
+	pages = {596--603}
 }
 
-@report{parker_single_1998,
+@techreport{parker_single_1998,
 	title = {Single sample soft shadows},
 	abstract = {A simple extension to ray tracing is presented that creates visually plausible “soft ” shadows with little extra computation. Although these soft shadows are approximate, they are robust and have penumbra widths that behave in a believable way, including accurate placement of singularities where penumbra width is zero. The method has continuous behavior in space and time, so it is appropriate for both static and dynamic image generation. 1},
 	author = {Parker, Steven and Shirley, Peter and Smits, Brian},
-	date = {1998}
+	year = {1998},
+	file = {Citeseer - Full Text PDF:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/BNM3IF8G/Parker et al. - 1998 - Single sample soft shadows.pdf:application/pdf;Citeseer - Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/GBN84ZS4/summary.html:text/html}
 }
 
 @book{pharr_gpu_2005,
-	title = {{GPU} Gems 2: Programming Techniques For High-Performance Graphics And General-Purpose Computation},
+	series = {{GPU} {Gems}},
+	title = {{GPU} {Gems} 2: {Programming} {Techniques} {For} {High}-{Performance} {Graphics} {And} {General}-{Purpose} {Computation}},
 	isbn = {978-0-321-33559-3},
 	url = {https://books.google.ch/books?id=QuBkQgAACAAJ},
-	series = {{GPU} Gems},
 	publisher = {Pearson Addison Wesley Prof},
 	author = {Pharr, M. and Fernando, R.},
-	date = {2005},
+	year = {2005},
 	lccn = {2004030181}
 }
 
-@book{wikipedia_foundation_zotero_2015,
+@misc{wikipedia_foundation_zotero_2015,
 	title = {Zotero},
 	url = {https://de.wikipedia.org/wiki/Zotero},
 	author = {{Wikipedia Foundation}},
-	date = {2015-08},
-	note = {Published: Website Abgerufen am 27. September 2015}
+	month = aug,
+	year = {2015},
+	note = {Published: Website
+Abgerufen am 27. September 2015}
 }
 
 @article{whitted_improved_1980,
-	title = {An Improved Illumination Model for Shaded Display},
+	title = {An {Improved} {Illumination} {Model} for {Shaded} {Display}},
 	volume = {23},
 	issn = {0001-0782},
 	url = {http://doi.acm.org/10.1145/358876.358882},
 	doi = {10.1145/358876.358882},
-	pages = {343--349},
 	number = {6},
-	journaltitle = {Commun. {ACM}},
+	journal = {Commun. ACM},
 	author = {Whitted, Turner},
-	date = {1980-06},
-	keywords = {computer animation, computer graphics, raster displays, shading, visible surface algorithms}
+	month = jun,
+	year = {1980},
+	keywords = {computer animation, computer graphics, raster displays, shading, visible surface algorithms},
+	pages = {343--349}
 }
 
 @book{hughes_computer_2013,
-	title = {Computer Graphics: Principles and Practice},
+	series = {The systems programming series},
+	title = {Computer {Graphics}: {Principles} and {Practice}},
 	isbn = {978-0-321-39952-6},
 	url = {https://books.google.ch/books?id=OVpsAQAAQBAJ},
-	series = {The systems programming series},
 	publisher = {Addison-Wesley},
 	author = {Hughes, J.F. and Van Dam, A. and Foley, J.D. and Feiner, S.K.},
-	date = {2013},
+	year = {2013},
 	lccn = {2012045569}
 }
 
 @book{foley_computer_1996,
-	title = {Computer Graphics: Principles and Practice},
+	series = {Addison-{Wesley} systems programming series},
+	title = {Computer {Graphics}: {Principles} and {Practice}},
 	isbn = {978-0-201-84840-3},
 	url = {https://books.google.ch/books?id=-4ngT05gmAQC},
-	series = {Addison-Wesley systems programming series},
 	publisher = {Addison-Wesley},
 	author = {Foley, J.D.},
-	date = {1996},
+	year = {1996},
 	lccn = {lc95013631}
 }
 
 @article{kajiya_rendering_1986,
-	title = {The Rendering Equation},
+	title = {The {Rendering} {Equation}},
 	volume = {20},
 	issn = {0097-8930},
 	url = {http://doi.acm.org/10.1145/15886.15902},
 	doi = {10.1145/15886.15902},
-	pages = {143--150},
 	number = {4},
-	journaltitle = {{SIGGRAPH} Comput. Graph.},
+	journal = {SIGGRAPH Comput. Graph.},
 	author = {Kajiya, James T.},
-	date = {1986-08}
+	month = aug,
+	year = {1986},
+	pages = {143--150}
 }
 
 @article{hart_sphere_1994,
-	title = {Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces},
+	title = {Sphere {Tracing}: {A} {Geometric} {Method} for the {Antialiased} {Ray} {Tracing} of {Implicit} {Surfaces}},
 	volume = {12},
-	pages = {527--545},
-	journaltitle = {The Visual Computer},
+	journal = {The Visual Computer},
 	author = {Hart, John C.},
-	date = {1994}
+	year = {1994},
+	pages = {527--545}
 }
 
 @book{division_introduction_1996,
-	title = {An Introduction to Implicit Techniques},
-	url = {https://books.google.ch/books?id=Ew40GwAACAAJ},
 	series = {Research report},
-	publisher = {{IBM} T.J. Watson Research Center},
+	title = {An {Introduction} to {Implicit} {Techniques}},
+	url = {https://books.google.ch/books?id=Ew40GwAACAAJ},
+	publisher = {IBM T.J. Watson Research Center},
 	author = {Division, International Business Machines Corporation Research and Menon, J.},
-	date = {1996}
+	year = {1996}
 }
 
 @article{hart_ray_1993,
 	title = {Ray tracing implicit surfaces},
-	pages = {1--16},
-	journaltitle = {Siggraph 93 Course Notes: Design, Visualization and Animation of Implicit Surfaces},
+	journal = {Siggraph 93 Course Notes: Design, Visualization and Animation of Implicit Surfaces},
 	author = {Hart, John C},
-	date = {1993}
+	year = {1993},
+	pages = {1--16}
 }
 
 @article{jones_3d_2006,
-	title = {3D Distance Fields: A Survey of Techniques and Applications},
+	title = {3D {Distance} {Fields}: {A} {Survey} of {Techniques} and {Applications}},
 	volume = {12},
 	issn = {1077-2626},
 	url = {http://dx.doi.org/10.1109/TVCG.2006.56},
 	doi = {10.1109/TVCG.2006.56},
-	pages = {581--599},
 	number = {4},
-	journaltitle = {{IEEE} Transactions on Visualization and Computer Graphics},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
 	author = {Jones, Mark W. and Baerentzen, J. Andreas and Sramek, Milos},
-	date = {2006-07},
-	keywords = {cut locus, Distance field, distance transform., fast marching method, level-set method, medial axis, skeletonization, visualization, volume, volume data, voxel, voxelization}
+	month = jul,
+	year = {2006},
+	keywords = {cut locus, Distance field, distance transform., fast marching method, level-set method, medial axis, skeletonization, visualization, volume, volume data, voxel, voxelization},
+	pages = {581--599}
 }
 
 @article{perlin_hypertexture_1989,
@@ -137,153 +144,202 @@
 	issn = {0097-8930},
 	url = {http://doi.acm.org/10.1145/74334.74359},
 	doi = {10.1145/74334.74359},
-	pages = {253--262},
 	number = {3},
-	journaltitle = {{SIGGRAPH} Comput. Graph.},
+	journal = {SIGGRAPH Comput. Graph.},
 	author = {Perlin, K. and Hoffert, E. M.},
-	date = {1989-07}
+	month = jul,
+	year = {1989},
+	pages = {253--262}
 }
 
 @article{hart_ray_1989,
-	title = {Ray Tracing Deterministic 3-D Fractals},
+	title = {Ray {Tracing} {Deterministic} 3-{D} {Fractals}},
 	volume = {23},
 	issn = {0097-8930},
 	url = {http://doi.acm.org/10.1145/74334.74363},
 	doi = {10.1145/74334.74363},
-	pages = {289--296},
 	number = {3},
-	journaltitle = {{SIGGRAPH} Comput. Graph.},
+	journal = {SIGGRAPH Comput. Graph.},
 	author = {Hart, J. C. and Sandin, D. J. and Kauffman, L. H.},
-	date = {1989-07}
+	month = jul,
+	year = {1989},
+	pages = {289--296}
 }
 
 @book{arlington_mathematical_applications_group_inc_afips_1968,
-	location = {New York, {NY}, {USA}},
-	title = {{AFIPS} '68 (Fall, part I): Proceedings of the December 9-11, 1968, Fall Joint Computer Conference, Part I},
-	publisher = {{ACM}},
+	address = {New York, NY, USA},
+	title = {{AFIPS} '68 ({Fall}, part {I}): {Proceedings} of the {December} 9-11, 1968, {Fall} {Joint} {Computer} {Conference}, {Part} {I}},
+	publisher = {ACM},
 	author = {{Arlington Mathematical Applications Group, Inc}},
-	date = {1968},
+	year = {1968},
 	note = {Library of Congress Catalog Card No.: 55-44701}
 }
 
 @inproceedings{appel_techniques_1968,
-	location = {New York, {NY}, {USA}},
-	title = {Some Techniques for Shading Machine Renderings of Solids},
+	address = {New York, NY, USA},
+	series = {{AFIPS} '68 ({Spring})},
+	title = {Some {Techniques} for {Shading} {Machine} {Renderings} of {Solids}},
 	url = {http://doi.acm.org/10.1145/1468075.1468082},
 	doi = {10.1145/1468075.1468082},
-	series = {{AFIPS} {'68} (Spring)},
-	pages = {37--45},
-	booktitle = {Proceedings of the April 30–May 2, 1968, Spring Joint Computer Conference},
-	publisher = {{ACM}},
+	booktitle = {Proceedings of the {April} 30–{May} 2, 1968, {Spring} {Joint} {Computer} {Conference}},
+	publisher = {ACM},
 	author = {Appel, Arthur},
-	date = {1968}
+	year = {1968},
+	pages = {37--45}
 }
 
-@collection{glassner_introduction_1989,
-	location = {London, {UK}, {UK}},
-	title = {An Introduction to Ray Tracing},
+@book{glassner_introduction_1989,
+	address = {London, UK, UK},
+	title = {An {Introduction} to {Ray} {Tracing}},
 	isbn = {0-12-286160-4},
 	publisher = {Academic Press Ltd.},
 	editor = {Glassner, Andrew S.},
-	date = {1989}
+	year = {1989}
 }
 
-@book{liam_collins_sons_&_co._ltd._collins_2015,
-	title = {Collins English Dictionary - Complete \& Unabridged 10th Edition},
+@misc{liam_collins_sons_&_co._ltd._collins_2015,
+	title = {Collins {English} {Dictionary} - {Complete} \& {Unabridged} 10th {Edition}},
 	url = {http://dictionary.reference.com/browse/foldback},
 	author = {{liam Collins Sons \& Co. Ltd.}},
-	date = {2015-10}
+	month = oct,
+	year = {2015}
 }
 
-@book{wikipedia_the_free_encyclopedia_boost_2015,
-	title = {Boost (C++-Bibliothek)},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+@misc{wikipedia_the_free_encyclopedia_boost_2015,
+	title = {Boost ({C}++-{Bibliothek})},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://de.wikipedia.org/w/index.php?title=Boost_(C%2B%2B-Bibliothek)&oldid=146313866},
-	abstract = {Boost (englisch Boost C++ Libraries) ist eine freie C++-Bibliothek, die aus einer Vielzahl von portablen Unterbibliotheken besteht. Die Unterbibliotheken dienen unterschiedlichsten Aufgaben von Algorithmen auf Graphen über Metaprogrammierung bis hin zu Speicherverwaltung. Es können jederzeit neue Bibliotheken zur Eingliederung in Boost vorgeschlagen werden, diese müssen jedoch einen aufwendigen Review-Prozess durchlaufen. Teile von Boost wurden in einen so genannten technischen Bericht (technical report) des Standardisierungskomitees für C++ übernommen und später in die Sprache C++ integriert ({ISO}/{IEC} 14882:2011). ↑ Boost Version History ↑ Boost Software License: Text der Version 1.0, Erläuterungen zur Lizenz ↑ Review Prozess für Boost-Bibliotheken ↑ C++ Technical Report 1 ({PDF}-Datei; 1,37 {MB})},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {Boost (englisch Boost C++ Libraries) ist eine freie C++-Bibliothek, die aus einer Vielzahl von portablen Unterbibliotheken besteht. Die Unterbibliotheken dienen unterschiedlichsten Aufgaben von Algorithmen auf Graphen über Metaprogrammierung bis hin zu Speicherverwaltung.
+Es können jederzeit neue Bibliotheken zur Eingliederung in Boost vorgeschlagen werden, diese müssen jedoch einen aufwendigen Review-Prozess durchlaufen. Teile von Boost wurden in einen so genannten technischen Bericht (technical report) des Standardisierungskomitees für C++ übernommen und später in die Sprache C++ integriert (ISO/IEC 14882:2011).
+↑ Boost Version History
+↑ Boost Software License: Text der Version 1.0, Erläuterungen zur Lizenz
+↑ Review Prozess für Boost-Bibliotheken
+↑ C++ Technical Report 1 (PDF-Datei; 1,37 MB)},
+	language = {de},
 	urldate = {2015-10-31},
-	date = {2015-09},
-	langid = {german},
-	note = {Page Version {ID}: 146313866}
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = sep,
+	year = {2015},
+	note = {Page Version ID: 146313866},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/G22W4H43/index.html:text/html}
 }
 
-@book{wikipedia_the_free_encyclopedia_c++_2015,
+@misc{wikipedia_the_free_encyclopedia_c++_2015,
 	title = {C++},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://de.wikipedia.org/w/index.php?title=C%2B%2B&oldid=147529052},
-	abstract = {C++ ist eine von der {ISO} genormte Programmiersprache. Sie wurde ab 1979 von Bjarne Stroustrup bei {AT}\&T als Erweiterung der Programmiersprache C entwickelt. C++ ermöglicht sowohl die effiziente und maschinennahe Programmierung als auch eine Programmierung auf hohem Abstraktionsniveau. Der Standard definiert auch eine Standardbibliothek, zu der verschiedene Implementierungen existieren.},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {C++ ist eine von der ISO genormte Programmiersprache. Sie wurde ab 1979 von Bjarne Stroustrup bei AT\&T als Erweiterung der Programmiersprache C entwickelt. C++ ermöglicht sowohl die effiziente und maschinennahe Programmierung als auch eine Programmierung auf hohem Abstraktionsniveau. Der Standard definiert auch eine Standardbibliothek, zu der verschiedene Implementierungen existieren.},
+	language = {de},
 	urldate = {2015-10-31},
-	date = {2015-10},
-	langid = {german},
-	note = {Page Version {ID}: 147529052}
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 147529052},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/2ZE7BBG7/index.html:text/html}
 }
 
-@book{wikipedia_the_free_encyclopedia_opengl_2015,
+@misc{wikipedia_the_free_encyclopedia_opengl_2015,
 	title = {{OpenGL}},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://de.wikipedia.org/w/index.php?title=OpenGL&oldid=146904140},
-	abstract = {{OpenGL} (Open Graphics Library; deutsch Offene Grafikbibliothek) ist eine Spezifikation für eine plattform- und programmiersprachenunabhängige Programmierschnittstelle zur Entwicklung von 2D- und 3D- Computergrafikanwendungen. Der {OpenGL}-Standard beschreibt etwa 250 Befehle, die die Darstellung komplexer 3D-Szenen in Echtzeit erlauben. Zudem können andere Organisationen (zumeist Hersteller von Grafikkarten) proprietäre Erweiterungen definieren. Die Implementierung des {OpenGL}-{API} erfolgt in der Regel durch Systembibliotheken, auf einigen Betriebssystemen auch als Teil der Grafikkarten-Treiber. Diese führen entsprechend Befehle der Grafikkarte aus, insbesondere müssen auf der Grafikkarte nicht vorhandene Funktionen durch die {CPU} emuliert werden.},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {OpenGL (Open Graphics Library; deutsch Offene Grafikbibliothek) ist eine Spezifikation für eine plattform- und programmiersprachenunabhängige Programmierschnittstelle zur Entwicklung von 2D- und 3D- Computergrafikanwendungen. Der OpenGL-Standard beschreibt etwa 250 Befehle, die die Darstellung komplexer 3D-Szenen in Echtzeit erlauben. Zudem können andere Organisationen (zumeist Hersteller von Grafikkarten) proprietäre Erweiterungen definieren.
+Die Implementierung des OpenGL-API erfolgt in der Regel durch Systembibliotheken, auf einigen Betriebssystemen auch als Teil der Grafikkarten-Treiber. Diese führen entsprechend Befehle der Grafikkarte aus, insbesondere müssen auf der Grafikkarte nicht vorhandene Funktionen durch die CPU emuliert werden.},
+	language = {de},
 	urldate = {2015-10-31},
-	date = {2015-10},
-	langid = {german},
-	note = {Page Version {ID}: 146904140}
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 146904140},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/KRDACBK3/index.html:text/html}
 }
 
-@book{wikipedia_the_free_encyclopedia_glfw_2015,
+@misc{wikipedia_the_free_encyclopedia_glfw_2015,
 	title = {{GLFW}},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://en.wikipedia.org/w/index.php?title=GLFW&oldid=687716464},
-	abstract = {{GLFW} is a lightweight utility library for use with {OpenGL}. It provides programmers with the ability to create and manage windows and {OpenGL} contexts, as well as handle joystick, keyboard and mouse input.},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {GLFW is a lightweight utility library for use with OpenGL. It provides programmers with the ability to create and manage windows and OpenGL contexts, as well as handle joystick, keyboard and mouse input.},
+	language = {en},
 	urldate = {2015-10-31},
-	date = {2015-10},
-	langid = {english},
-	note = {Page Version {ID}: 687716464}
+	journal = {Wikipedia, the free encyclopedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 687716464},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/F776J6DQ/index.html:text/html}
 }
 
-@book{wikipedia_the_free_encyclopedia_opengl_2015-1,
-	title = {{OpenGL} Extension Wrangler Library},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+@misc{wikipedia_the_free_encyclopedia_opengl_2015-1,
+	title = {{OpenGL} {Extension} {Wrangler} {Library}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://en.wikipedia.org/w/index.php?title=OpenGL_Extension_Wrangler_Library&oldid=680716273},
-	abstract = {The {OpenGL} Extension Wrangler Library ({GLEW}) is a cross-platform C/C++ library that helps in querying and loading {OpenGL} extensions. {GLEW} provides efficient run-time mechanisms for determining which {OpenGL} extensions are supported on the target platform. All {OpenGL} extensions are exposed in a single header file, which is machine-generated from the official extension list. {GLEW} is available for a variety of operating systems, including Windows, Linux, Mac {OS} X, {FreeBSD}, {IRIX}, and Solaris. {GLEW} is distributed under modified {BSD} licenses, and the header file generator is under the {GNU} {GPL}.},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {The OpenGL Extension Wrangler Library (GLEW) is a cross-platform C/C++ library that helps in querying and loading OpenGL extensions. GLEW provides efficient run-time mechanisms for determining which OpenGL extensions are supported on the target platform. All OpenGL extensions are exposed in a single header file, which is machine-generated from the official extension list. GLEW is available for a variety of operating systems, including Windows, Linux, Mac OS X, FreeBSD, IRIX, and Solaris.
+GLEW is distributed under modified BSD licenses, and the header file generator is under the GNU GPL.},
+	language = {en},
 	urldate = {2015-10-31},
-	date = {2015-09},
-	langid = {english},
-	note = {Page Version {ID}: 680716273}
+	journal = {Wikipedia, the free encyclopedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = sep,
+	year = {2015},
+	note = {Page Version ID: 680716273},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/WBQNEUTX/index.html:text/html}
 }
 
-@book{wikipedia_the_free_encyclopedia_cmake_2015,
+@misc{wikipedia_the_free_encyclopedia_cmake_2015,
 	title = {{CMake}},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://de.wikipedia.org/w/index.php?title=CMake&oldid=146167565},
-	abstract = {{CMake} (cross-platform make) ist ein plattformunabhängiges Programmierwerkzeug für die Entwicklung und Erstellung von Software. ↑ www.cmake.org {CMake} Participants ↑ {CMake} 3.3.2 available for download. Abgerufen am 18. September 2015. ↑ Ohloh Analysis Summary - {CMake}. Ohloh. Abgerufen am 25. Dezember 2009.},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {CMake (cross-platform make) ist ein plattformunabhängiges Programmierwerkzeug für die Entwicklung und Erstellung von Software.
+↑ www.cmake.org CMake Participants
+↑ CMake 3.3.2 available for download. Abgerufen am 18. September 2015.
+↑ Ohloh Analysis Summary - CMake. Ohloh. Abgerufen am 25. Dezember 2009.},
+	language = {de},
 	urldate = {2015-10-31},
-	date = {2015-09},
-	langid = {german},
-	note = {Page Version {ID}: 146167565}
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = sep,
+	year = {2015},
+	note = {Page Version ID: 146167565},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/B5NIENQI/index.html:text/html}
 }
 
-@book{wikipedia_the_free_encyclopedia_gnu_2015,
-	title = {{GNU} Compiler Collection},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
+@misc{wikipedia_the_free_encyclopedia_gnu_2015,
+	title = {{GNU} {Compiler} {Collection}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
 	url = {https://de.wikipedia.org/w/index.php?title=GNU_Compiler_Collection&oldid=147327365},
-	abstract = {{GCC} ist der Name der Compiler-Suite des {GNU}-Projekts. {GCC} stand ursprünglich für {GNU} C Compiler. Da {GCC} heute aber außer C noch einige andere Programmiersprachen übersetzen kann, hat {GCC} inzwischen die Bedeutung {GNU} Compiler Collection erhalten (englisch für {GNU}-Compilersammlung). Das Kommando gcc (in Kleinbuchstaben) steht weiterhin für den C-Compiler.},
-	author = {{Wikipedia, the free encyclopedia}},
+	abstract = {GCC ist der Name der Compiler-Suite des GNU-Projekts. GCC stand ursprünglich für GNU C Compiler. Da GCC heute aber außer C noch einige andere Programmiersprachen übersetzen kann, hat GCC inzwischen die Bedeutung GNU Compiler Collection erhalten (englisch für GNU-Compilersammlung). Das Kommando gcc (in Kleinbuchstaben) steht weiterhin für den C-Compiler.},
+	language = {de},
 	urldate = {2015-10-31},
-	date = {2015-10},
-	langid = {german},
-	note = {Page Version {ID}: 147327365}
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 147327365},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/NWSUCSNN/index.html:text/html}
 }
 
-@online{danchilla_beginning_webgl,
-	title = {Beginning {WebGL}},
-	url = {http://www.beginningwebgl.com/examples/chapter-4},
-	titleaddon = {Beginning {WebGL}},
-	author = {Danchilla, Brian},
-	urldate = {2015-12-26},
-	file = {Beginning WebGL - Chapter 4 Examples:/Users/so/Library/Application Support/Zotero/Profiles/mewz8ehz.default/zotero/storage/DHAT6JPZ/chapter-4.html:text/html}
+@book{pharr_physically_2010,
+	address = {San Francisco, CA, USA},
+	edition = {2nd},
+	title = {Physically {Based} {Rendering}, {Second} {Edition}: {From} {Theory} {To} {Implementation}},
+	isbn = {0-12-375079-2 978-0-12-375079-2},
+	publisher = {Morgan Kaufmann Publishers Inc.},
+	author = {Pharr, Matt and Humphreys, Greg},
+	year = {2010}
+}
+
+@article{heckbert_adaptive_1990,
+	title = {Adaptive {Radiosity} {Textures} for {Bidirectional} {Ray} {Tracing}},
+	volume = {24},
+	issn = {0097-8930},
+	url = {http://doi.acm.org/10.1145/97880.97895},
+	doi = {10.1145/97880.97895},
+	number = {4},
+	journal = {SIGGRAPH Comput. Graph.},
+	author = {Heckbert, Paul S.},
+	month = sep,
+	year = {1990},
+	pages = {145--154}
 }
